--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "highlight.js": "^10.5.0",
     "polka": "next",
     "sass": "^1.32.4",
     "sirv": "^1.0.0"
@@ -29,6 +30,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@jackfranklin/rollup-plugin-markdown": "^0.3.0",
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
