--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "generate-github-markdown-css": "^4.0.0",
     "highlight.js": "^10.5.0",
     "polka": "next",
     "sass": "^1.32.4",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-typewriter": "^2.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
