--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.1",
     "generate-github-markdown-css": "^4.0.0",
     "highlight.js": "^10.5.0",
+    "ical.js": "^1.4.0",
     "polka": "next",
     "sass": "^1.32.4",
     "sirv": "^1.0.0"
