--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "node-fetch": "^2.6.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
