--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -10,7 +10,7 @@ body:
 - type: textarea
   attributes:
     label: What happened?
-    description: What did you expect to happen?
-    placeholder: What did you see?
+    description: Can you please explain what happened, what you saw, what you expected to see, and any other relevant information?
+    placeholder: Type away!
   validations:
     required: false
