--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,16 +1,17 @@
 name: Bug Report
 description: Report a bug you've found
-title: "[BUG]: "
+title: ""
 labels: "bug"
 body:
 - type: markdown
   attributes:
     value: |
-      Thanks for taking the fime to fill out this bug report!
+      Thanks for taking the time to fill out this bug report! ![logo](https://raw.githubusercontent.com/EthanThatOneKid/acmcsuf.com/main/static/assets/about-illustration.svg)
 - type: textarea
   attributes:
     label: What happened?
-    description: Can you please explain what happened, what you saw, what you expected to see, and any other relevant information?
+    description: |
+      Can you please explain what happened, what you saw, what you expected to see, and any other relevant information? Please drag and drop any screenshots here.
     placeholder: Type away!
   validations:
     required: false
