--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Thought of a neat feature for <https://acmcsuf.com>?
+description: Thought of a neat feature for acmcsuf.com?
 labels: "enhancement"
 body:
 - type: markdown
