--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
 	"useTabs": true,
+	"tabWidth": 2,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100
+	"printWidth": 100,
+	"svelteStrictMode": false,
+	"svelteAllowShorthand": true,
+	"svelteBracketNewLine": false,
+	"svelteIndentScriptAndStyles": true,
+	"svelteSortOrder": "scripts-options-markup-styles"
 }
