--- a/.github/workflows/create_issue_channel.discord.yml
+++ b/.github/workflows/create_issue_channel.discord.yml
@@ -5,12 +5,16 @@ on:
     types: [ opened ]
 
 jobs:
-  test:
+  create_channel:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+      env:
+        DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
+        GUILD_ID: ${{ secrets.GUILD_ID }}
+        HUB_ID: ${{ secrets.HUB_ID }}
     - run: node scripts/create-issue-channel
  
