--- a/.github/workflows/close_issue_channel.yaml
+++ b/.github/workflows/close_issue_channel.yaml
@@ -18,3 +18,4 @@ jobs:
           DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
           GUILD_ID: ${{ secrets.GUILD_ID }}
           HUB_ID: ${{ secrets.HUB_ID }}
+          ARCHIVE_CHANNEL_ID: ${{ secrets.ARCHIVE_CHANNEL_ID }}
