--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-	"useTabs": true,
-	"tabWidth": 2,
-	"singleQuote": true,
-	"printWidth": 100,
-	"svelteStrictMode": false,
-	"svelteAllowShorthand": true,
-	"svelteBracketNewLine": false,
-	"svelteIndentScriptAndStyle": true,
-	"svelteSortOrder": "scripts-options-markup-styles"
+  "useTabs": false,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "printWidth": 100,
+  "svelteStrictMode": false,
+  "svelteAllowShorthand": true,
+  "svelteBracketNewLine": false,
+  "svelteIndentScriptAndStyle": true,
+  "svelteSortOrder": "scripts-options-markup-styles"
 }
