--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -39,8 +39,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Check code
+      - name: Lint
+        run: npm run lint
+
+      - name: Check
         run: npm run check
 
-      - name: Seek Tabs
-        run: npm run tabs
+      - name: Build
+        run: npm run build
