--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "node-fetch": "^3.0.0",
     "prettier": "^2.4.1",
