--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-	"name": "acmcsuf.com",
-	"type": "module",
-	"homepage": "https://acmcsuf.com/",
-	"author": {
-		"name": "EthanThatOneKid",
-		"url": "https://etok.codes/"
-	},
-	"repository": {
-		"url": "https://github.com/EthanThatOneKid/acmcsuf.com.git/"
-	},
-	"version": "1.1.0",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-	},
-	"dependencies": {
-		"rfs": "^9.0.6",
-		"rrule": "^2.6.8"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-static": "next",
-		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"discord.js": "^13.2.0",
-		"dotenv": "^10.0.0",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"sass": "^1.42.1",
-		"svelte": "^3.42.6",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
-	}
+  "name": "acmcsuf.com",
+  "type": "module",
+  "homepage": "https://acmcsuf.com/",
+  "author": {
+    "name": "EthanThatOneKid",
+    "url": "https://etok.codes/"
+  },
+  "repository": {
+    "url": "https://github.com/EthanThatOneKid/acmcsuf.com.git/"
+  },
+  "version": "1.1.0",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "tabs": "node scripts/seek-tabs.js"
+  },
+  "dependencies": {
+    "rfs": "^9.0.6",
+    "rrule": "^2.6.8"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/adapter-vercel": "next",
+    "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "node-fetch": "^3.0.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
+    "sass": "^1.42.1",
+    "svelte": "^3.42.6",
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.9.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
+  }
 }
