--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -25,8 +25,10 @@ jobs:
         with:
           node-version: '16'
       
-      - name: Run Update Officer Script
+      - name: Install Dependencies
         run: npm ci
+      
+      - name: Run Update Officer Script
         run: node scripts/update-officer.js "${{ steps.parse.outputs.payload }}"
 
       - name: Create Pull Request
