--- a/.github/ISSUE_TEMPLATE/officer_form.yaml
+++ b/.github/ISSUE_TEMPLATE/officer_form.yaml
@@ -1,38 +1,50 @@
 name: Officer Form
 description: Here is where you can update an acmCSUF officer's information.
-labels: 'officer form'
+title: '[OFFICER_AUTOMATION]'
+labels: ['automation:officer']
 
 body:
   - type: markdown
     attributes:
       value: |
+        ### About this form
+        When you submit this form, an automation is triggered that creates a PR updating the user data on <https://acmcsuf.com/about/>.
+        This form only triggers a workflow if you are an authorized contributor.
         ![banner](https://raw.githubusercontent.com/EthanThatOneKid/acmcsuf.com/main/static/assets/about-illustration.svg)
-        <small>Note: Banner not included in your published bug report.</small>
+        **Note**: Above banner not included in your published bug report.
 
   - type: input
     id: officer_name
     attributes:
       label: '>>Officer Name<<'
-      description: Please enter the name of the officer as seen on https://acmcsuf.com/.
+      description: Please enter the name of the officer as seen on https://acmcsuf.com/about/.
     validations:
       required: true
 
   - type: dropdown
-    id: officer_position
+    id: officer_term
     attributes:
       label: '>>Overwrite Officer Position<<'
       options:
-        - S21
-        - F21
-        - S22
-        - F22
+        - Spring 2021
+        - Fall 2021
+        - Spring 2022
+        - Fall 2022
+    validations:
+      required: false
+
+  - type: input
+    id: officer_position
+    attributes:
+      label: '>>Overwrite Officer Position Title<<'
+      description: Please enter the new title of the officer's position during the term selected above.
     validations:
       required: false
 
   - type: textarea
     id: officer_image
     attributes:
-      label: '>>Overwrite Officer Image<<'
+      label: '>>Overwrite Officer Picture<<'
       description: |
         If an image is detected inside of this textarea, it will be used to update the officer's image on the website.
       placeholder: You can attach images by clicking this area to highlight it and then dragging files in.
