Chaining https://github.com/EthanThatOneKid/acmcsuf.com/commit/7df888109c646cf9eb3127b966245c80bf2c802d

--- a/.github/ISSUE_TEMPLATE/officer_update_request.yaml
+++ b/.github/ISSUE_TEMPLATE/officer_update_request.yaml
@@ -1,4 +1,4 @@
-name: Officer Form
+name: Officer Update Request
 description: Here is where you can update an acmCSUF officer's information.
 title: '[OFFICER_AUTOMATION]'
 labels: ['automation:officer']
