Chaining https://github.com/EthanThatOneKid/acmcsuf.com/commit/7df888109c646cf9eb3127b966245c80bf2c802d

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run Update Officer Script
         id: update_officer
-        run: node scripts/update-officer.js "${{ toJSON(fromJSON(steps.parse.outputs.payload)) }}"
+        run: node scripts/update-officer.js ${{ steps.parse.outputs.payload }}
 
       - name: Create Pull Request
         id: pull_request
