--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -30,7 +30,9 @@ jobs:
 
       - name: Run Update Officer Script
         id: update_officer
-        run: node scripts/update-officer.js ${{ steps.parse.outputs.payload }}
+        run: node scripts/update-officer.js
+        env:
+          FORM_DATA: ${{ steps.parse.outputs.payload }}
 
       - name: Create Pull Request
         id: pull_request
