Chaining https://github.com/EthanThatOneKid/acmcsuf.com/commit/7df888109c646cf9eb3127b966245c80bf2c802d

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -20,6 +20,11 @@ jobs:
           label_marker_start: '>>'
           label_marker_end: '<<'
 
+      - name: Set form data as environment variable
+        run: |
+          touch .env
+          echo FORM_DATA=${{ steps.parse.outputs.payload }} >> .env
+
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
