Chaining https://github.com/EthanThatOneKid/acmcsuf.com/commit/7df888109c646cf9eb3127b966245c80bf2c802d

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - run: node scripts/update-officer.js
         env:
-          FORM_DATA: ${{ steps.parse.outputs.payload }}
+          FORM_DATA: steps.parse.outputs.payload
 
       - name: Create Pull Request
         id: pull_request
