Chaining https://github.com/EthanThatOneKid/acmcsuf.com/blob/612ffc0cb71b051d5b4c79f2b07554aa986dad53/scripts/close-issue-channel.js#L1

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -20,11 +20,6 @@ jobs:
           label_marker_start: '>>'
           label_marker_end: '<<'
 
-      - name: Set form data as environment variable
-        run: |
-          touch .env
-          echo FORM_DATA=${{ steps.parse.outputs.payload }} >> .env
-
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
@@ -35,7 +30,7 @@ jobs:
 
       - run: node scripts/update-officer.js
         env:
-          FORM_DATA: steps.parse.outputs.payload
+          FORM_DATA: ${{ steps.parse.outputs.payload }}
 
       - name: Create Pull Request
         id: pull_request
