--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -32,7 +32,14 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: Update officer
-          title: Update officer
-          body: Process automated by \#${{ github.event.issue.number }}
+          commit-message: Updated officer data
+          title: '[OFFICER_AUTOMATION]'
+          body: This change was automated by officer update request \#${{ github.event.issue.number }} ✨
           branch: update-officers
+
+      - name: Close Issue
+        id: close_successfully
+        uses: peter-evans/close-issue@v1
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          comment: Closed by \#${{ steps.pull_request.outputs.pull-request-number }}.
