Revert "Chaining https://github.com/EthanThatOneKid/acmcsuf.com/commit/7df888109c646cf9eb3127b966245c80bf2c802d"
This reverts commit b37d76764fde756e49636cc2d1aa9dd989265717.

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -47,6 +47,6 @@ jobs:
         uses: peter-evans/close-issue@v1
         with:
           issue_id: ${{ github.event.issue.number }}
-          message: Closed by \#${{ steps.pull_request.outputs.pull_request_id }}
+          message: Closed by \#${{ steps.pull_request.outputs.pull_request_id }
           state: closed
           body: ${{ steps.officer.outputs.body }}
