--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -20,21 +20,11 @@ jobs:
           separator: '###'
           label_marker_start: '>>'
           label_marker_end: '<<'
+      
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      
-      - name: Run Update Officer Script
-        run: npm ci
-        run: node scripts/update-officer.js "${{ steps.parse.outputs.payload }}"
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          commit-message: Updated officer data
-          title: '[OFFICER_AUTOMATION]'
-          body: This change was automated by officer update request \#${{ github.event.issue.number }} ✨
 
       - name: Install Dependencies
         run: npm ci
@@ -42,15 +32,13 @@ jobs:
       - run: node scripts/update-officer.js
         env:
           FORM_DATA: ${{ steps.parse.outputs.payload }}
-
+      
       - name: Create Pull Request
-        id: pull_request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: Update officer
-          title: Update officer
-          body: Process automated by \#${{ github.event.issue.number }}
-          branch: update-officers
+          commit-message: Updated officer data
+          title: '[OFFICER_AUTOMATION]'
+          body: These changes resolve officer update request \#${{ github.event.issue.number }} ✨
 
       - name: Close Issue
         id: close_successfully
