--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   update_officer:
     runs-on: ubuntu-latest
-    if: ${{ github.event.label.name == 'automation:officer' }}
+    if: ${{ contains(github.event.issue.labels.*.name, 'automation:officer') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
