--- a/.github/ISSUE_TEMPLATE/officer_update_request.yaml
+++ b/.github/ISSUE_TEMPLATE/officer_update_request.yaml
@@ -24,7 +24,7 @@ body:
   - type: dropdown
     id: officer_term
     attributes:
-      label: '>>Overwrite Officer Position<<'
+      label: '>>Term to Overwrite<<'
       options:
         - Spring 2021
         - Fall 2021
