--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -34,6 +34,7 @@ jobs:
           FORM_DATA: ${{ steps.parse.outputs.payload }}
       
       - name: Create Pull Request
+        id: pull_request
         uses: peter-evans/create-pull-request@v3
         with:
           commit-message: Updated officer data
