Added custom branch name so there arent weird PRs

--- a/.github/workflows/update_officer.yaml
+++ b/.github/workflows/update_officer.yaml
@@ -49,6 +49,7 @@ jobs:
           commit-message: Updated officer data
           title: 'Add/Update officer ${{ steps.officer-name.outputs.result }}'
           body: Resolves \#${{ github.event.issue.number }} ✨
+          branch: 'automation/${{ github.event.issue.number }}'
 
       - name: Close Issue
         id: close_successfully
