--- a/.github/workflows/create_issue_channel.yaml
+++ b/.github/workflows/create_issue_channel.yaml
@@ -7,9 +7,10 @@ on:
 jobs:
   create_channel:
     runs-on: ubuntu-latest
-    if: ${{ !(contains(github.event.issue.labels.*.name, 'automation')) }}
+    if: ${{ !contains(String(github.event.issue.labels.*.name), 'automation' }}
     steps:
       - uses: actions/checkout@v2
+        if: ${{ steps.automation_check.result === "false" }}
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
