--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "tabs": "node scripts/seek-tabs.js"
+    "tabs": "node scripts/seek-tabs.js",
+    "test:size": "npm i && size-limit"
   },
   "dependencies": {
     "rfs": "^9.0.6",
     "rrule": "^2.6.8"
   },
   "devDependencies": {
+    "@size-limit/file": "^7.0.4",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
@@ -41,10 +43,17 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.42.1",
+    "size-limit": "^7.0.4",
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "node_modules",
+      "limit": "50 MB"
+    }
+  ]
 }
