added test cmd to website check command

--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -45,5 +45,9 @@ jobs:
       - name: Check
         run: npm run check
 
+      # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
+      - name: Test Dependency Size
+        run: npm run test:size
+
       - name: Build
         run: npm run build
