--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "gfm.css": "^1.1.2",
+    "html-to-text": "^8.1.0",
     "rfs": "^9.0.6",
     "rrule": "^2.6.8",
     "rss": "^1.2.2"
