--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "test:size": "npm i && size-limit"
   },
   "dependencies": {
+    "gfm.css": "^1.1.2",
+    "html-to-text": "^8.1.0",
     "rfs": "^9.0.6",
-    "rrule": "^2.6.8"
+    "rrule": "^2.6.8",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@size-limit/file": "^7.0.4",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
+    "@types/rss": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "axios": "^0.24.0",
