Added prefer-arrow-callback and func-style rules to our Eslint config (#261)
* Bagan refactoring from `()=>{}` to `function(){}`

* Resolved all lint/check errors

* added new eslint rules

* Resolved remaining lint errors

* Update _query.ts

* Update _query.ts

* Fixed global.css bug: not appearing on all pages 100% of the time

* Update [id].svelte

* Resolves https://github.com/EthanThatOneKid/acmcsuf.com/pull/261#discussion_r791181628

* added comment as to why the line is disabled for https://github.com/EthanThatOneKid/acmcsuf.com/pull/261#discussion_r791181628

* Added eslint override to prevent unintended lint errors in js

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint --ignore-path .gitignore .",
+    "lint": "eslint --ignore-path .gitignore . --fix",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "tabs": "node scripts/seek-tabs.js",
     "test:size": "npm i && size-limit"
@@ -33,6 +33,7 @@
     "@sveltejs/adapter-static": "next",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
+    "@types/html-to-text": "^8.0.1",
     "@types/rss": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
