--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -39,6 +39,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Check Formatting
+        run: |
+          npm run format
+          bash ./scripts/check_site_changes.sh
+
       - name: Lint
         run: npm run lint
 
