--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint --ignore-path .gitignore . --fix",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "tabs": "node scripts/seek-tabs.js",
-    "test:size": "npm i && size-limit"
+    "test:size": "npm i && size-limit",
+    "test:format": "npm run format && bash ./scripts/check_site_changes.sh"
   },
   "dependencies": {
     "gfm.css": "^1.1.2",
