--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore . --fix",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . --list-different",
     "tabs": "node scripts/seek-tabs.js",
-    "test:size": "npm i && size-limit",
-    "test:format": "npm run format && bash ./scripts/check_site_changes.sh"
+    "test:size": "npm i && size-limit"
   },
   "dependencies": {
     "gfm.css": "^1.1.2",
