--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -40,7 +40,7 @@ jobs:
         run: npm ci
 
       - name: Check Formatting
-        run: npm run format || git diff --exit-code
+        run: npm run format && git diff --exit-code
 
       - name: Lint
         run: npm run lint
