--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -39,6 +39,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Check Formatting
+        run: npm run format && git diff --exit-code
+
       - name: Lint
         run: npm run lint
 
