--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore . --fix",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "format": "prettier --ignore-path .gitignore --list-different --write --plugin-search-dir=. .",
     "tabs": "node scripts/seek-tabs.js",
     "test:size": "npm i && size-limit"
   },
