Run format after lint instead

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --ignore-path .gitignore --list-different --write --plugin-search-dir=. .",
-    "lint": "npm run format && eslint --ignore-path .gitignore . --fix",
+    "lint": "eslint --ignore-path .gitignore . --fix && npm run format",
     "tabs": "node scripts/seek-tabs.js",
     "test:size": "npm i && size-limit"
   },
@@ -41,7 +41,6 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "node-fetch": "^3.0.0",
     "prettier": "^2.4.1",
