--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -41,7 +41,7 @@ jobs:
 
       # checks for lint errors AND format errors
       - name: Lint
-        run: npm run lint
+        run: npm run lint && git diff --exit-code
 
       - name: Check
         run: npm run check
