--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -39,11 +39,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Check Formatting
-        run: npm run format && git diff --exit-code
-
+      # checks for lint errors AND format errors
       - name: Lint
-        run: npm run lint
+        run: npm run lint && git diff --exit-code
 
       - name: Check
         run: npm run check
