--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "acmcsuf.com",
-  "short_name": "acm csuf",
+  "short_name": "ACM at CSUF",
   "icons": [
     {
-      "src": "/assets/favicon/android-chrome-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/favicon/android-chrome-384x384.png",
+      "src": "/android-chrome-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/assets/favicon/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
