Forked [`calendar-link`](https://github.com/AnandChowdhary/calendar-link#readme)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.8",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -46,6 +47,7 @@
     "node-fetch": "^3.0.0",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
+    "query-string": "^7.1.1",
     "sass": "^1.42.1",
     "size-limit": "^7.0.4",
     "svelte": "^3.42.6",
