--- a/static/manifest.json
+++ b/static/manifest.json
@@ -21,6 +21,21 @@
   "theme_color": "#3792c1",
   "background_color": "#ffffff",
   "start_url": ".",
+  "shortcuts": [
+    {
+      "name": "acmCSUF Events",
+      "short_name": "Events",
+      "description": "View upcoming acmCSUF events!",
+      "url": "/events",
+      "icons": [
+        {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
   "display": "standalone",
   "orientation": "portrait"
 }
