Added more shortcuts

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -34,6 +34,32 @@
           "type": "image/png"
         }
       ]
+    },
+    {
+      "name": "acmCSUF Blog",
+      "short_name": "Blog",
+      "description": "Read acmCSUF blog posts!",
+      "url": "/blog",
+      "icons": [
+        {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "About acmCSUF",
+      "short_name": "About",
+      "description": "Read all about acmCSUF!",
+      "url": "/about",
+      "icons": [
+        {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
     }
   ],
   "display": "standalone",
