Updated officer automation to integrate tiers

--- a/.github/ISSUE_TEMPLATE/officer_update_request.yaml
+++ b/.github/ISSUE_TEMPLATE/officer_update_request.yaml
@@ -51,13 +51,25 @@ body:
         - 'Vice President'
         - 'Webmaster'
         - 'Treasurer'
+        - 'Secretary'
+        - 'Event Coordinator'
+        - 'Marketing Coordinator'
+        - 'Historian'
+        - 'Data Analyst'
+        - 'AI President'
+        - 'AI Officer'
         - 'Algo President'
         - 'Algo Officer'
-        - 'Dev President'
-        - 'Dev Officer'
+        - 'Algo Event Coordinator'
         - 'Create President'
         - 'Create Officer'
-        - 'Node Buddy'
+        - 'Create Project Developer'
+        - 'Create Event Coordinator'
+        - 'Dev President'
+        - 'Dev Officer'
+        - 'Dev Project Manager'
+        - 'NodeBuds Officer'
+        - 'Deprecated Position'
     validations:
       required: false
 
