--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -46,6 +46,9 @@ jobs:
       - name: Check
         run: npm run check
 
+      - name: Test
+        run: npm run test
+
       # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
       - name: Test Dependency Size
         run: npm run test:size
