--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "format": "prettier --ignore-path .gitignore --list-different --write --plugin-search-dir=. .",
     "lint": "eslint --ignore-path .gitignore . --fix && npm run format",
     "tabs": "node scripts/seek-tabs.js",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "test:size": "npm i && size-limit",
-    "all": "npm run lint && npm run check && npm run build && npm run preview"
+    "all": "npm run lint && npm run check && npm run test && npm run build && npm run preview"
   },
   "dependencies": {
     "html-to-text": "^8.1.0",
@@ -32,6 +34,7 @@
     "@sveltejs/adapter-static": "next",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
+    "@testing-library/svelte": "^3.0.3",
     "@types/html-to-text": "^8.0.1",
     "@types/rss": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -42,6 +45,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "jsdom": "^19.0.0",
     "node-fetch": "^3.0.0",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
@@ -52,7 +56,9 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vitest": "^0.6.0",
+    "vitest-svelte-kit": "^0.0.6"
   },
   "size-limit": [
     {
