Added first group of tests for `/lib/ical/common`

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "printWidth": 100,
   "svelteStrictMode": false,
   "svelteAllowShorthand": true,
-  "svelteBracketNewLine": false,
+  "bracketSameLine": false,
   "svelteIndentScriptAndStyle": true,
   "svelteSortOrder": "scripts-options-markup-styles"
 }
