--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -34,7 +34,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-${{ github.event.pull_request.number }}-
 
       - name: Install Dependencies
         run: npm ci
