Started sorting all imports
- [ ] [`sort-imports`](https://eslint.org/docs/rules/sort-imports)
- [ ] [`sort-vars`](https://eslint.org/docs/rules/sort-vars)
- [ ] [`sort-keys`](https://eslint.org/docs/rules/sort-keys)

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-svelte3": "^3.4.1",
     "jsdom": "^19.0.0",
     "node-fetch": "^3.2.3",
