--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -34,7 +34,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-${{ github.event.pull_request.number }}-
 
       - name: Install Dependencies
         run: npm ci
@@ -45,6 +45,9 @@ jobs:
 
       - name: Check
         run: npm run check
+
+      - name: Test
+        run: npm run test
 
       # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
       - name: Test Dependency Size
